--- a/jenkinsfile
+++ b/jenkinsfile
@@ -66,11 +66,11 @@ pipeline {
         stage('Rollback on Failure') {
             steps {
                 script {
-                    def rollout_status = sh(script: "kubectl get rollout nodejs -n nodejs -o jsonpath='{.status.conditions[?(@.type==\"Progressing\")].status}'", returnStdout: true).trim()
+                    def rollout_status = sh(script: "kubectl get rollout nodejs-app -n nodejs -o jsonpath='{.status.conditions[?(@.type==\"Progressing\")].status}'", returnStdout: true).trim()
                     
                     if (rollout_status != "True") {
                         echo "🚨 Deployment failed! Rolling back..."
-                        sh "kubectl rollout undo rollout nodejs -n nodejs"
+                        sh "kubectl rollout undo rollout nodejs-app -n nodejs"
                     }
                 }
             }
