--- a/jenkinsfile
+++ b/jenkinsfile
@@ -66,7 +66,7 @@ pipeline {
         stage('Rollback on Failure') {
             steps {
                 script {
-                    def rollout_status = sh(script: "kubectl get rollout nodejs-app -n nodejs -o jsonpath='{.status.conditions[?(@.type==\"Progressing\")].status}'", returnStdout: true).trim()
+                    def rollout_status = sh(script: "kubectl get deployment nodejs-app -n nodejs -o jsonpath='{.status.conditions[?(@.type==\"Progressing\")].status}'", returnStdout: true).trim()
                     
                     if (rollout_status != "True") {
                         echo "🚨 Deployment failed! Rolling back..."
