--- a/menifests/app-deployment.yaml
+++ b/menifests/app-deployment.yaml
@@ -3,8 +3,8 @@ kind: Deployment
 metadata:
   name: nodejs-app
   namespace: nodejs
-  labelsd:
-    app: nodejs
+  labels:
+    app: node
 spec:
   replicas: 1
   selector:
