--- a/jenkinsfile
+++ b/jenkinsfile
@@ -64,16 +64,18 @@ pipeline {
         }
 
         stage('Rollback on Failure') {
-            when {
-                expression {
-                    def rollout_status = sh(script: "kubectl get deployment nodejs-app -n nodejs -o jsonpath='{.status.conditions[?(@.type==\"Available\")].status}'", returnStdout: true).trim()
-                    return rollout_status != "True"
-                }
-            }
             steps {
-                echo "🚨 Deployment failed! Rolling back..."
-                sh "kubectl rollout undo deployment nodejs-app -n nodejs --to-revision=0"
-                sh "kubectl delete pod -l app=nodejs-app -n nodejs --force --grace-period=0"
+                script {
+                    def rollout_status = sh(script: "kubectl get deployment nodejs-app -n nodejs -o jsonpath='{.status.conditions[?(@.type==\"Progressing\")].reason}'", returnStdout: true).trim()
+                    
+                    if (rollout_status == "ProgressDeadlineExceeded") {
+                        echo "🚨 Deployment exceeded progress deadline! Rolling back..."
+                        sh "kubectl rollout undo deployment nodejs-app -n nodejs --to-revision=0"
+                        sh "kubectl delete pod -l app=nodejs-app -n nodejs --force --grace-period=0"
+                    } else {
+                        echo "✔ Deployment is progressing or already available."
+                    }
+                }
             }
         }
     }
