--- a/jenkinsfile
+++ b/jenkinsfile
@@ -66,15 +66,16 @@ stage('Update Kubernetes Manifests') {
 stage('Apply Rollout') {
     steps {
         script {
-            // Fetch the latest code after updating the kustomization.yaml
+            // Ensure the latest changes are pulled before applying
             sh "git pull origin main"
 
-            // Apply the deployment with the updated image tag
+            // Apply kustomization with the updated image tag
             sh "kubectl apply -k menifests/"
             sh "kubectl rollout status deployment/nodejs-app -n nodejs"
         }
     }
 }
+
 
 
         stage('Rollback on Failure') {
