--- a/menifests/kustomization.yaml
+++ b/menifests/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
   - service.yaml
 namespace: nodejs
 images:
-  - name: daudidrees/aks-k8s-rollouts
+  - name: daudidrees/aks-k8s-rollouts  # Must match deployment.yaml image
     newName: daudidrees/aks-k8s-rollouts
     newTag: "88"
