--- a/rbac.yaml
+++ b/rbac.yaml
@@ -24,7 +24,11 @@ subjects:
   - kind: ServiceAccount
     name: jenkins-admin
     namespace: devops-tools
+  - kind: ServiceAccount
+    name: default  # ✅ Add the default SA here
+    namespace: devops-tools
 roleRef:
   kind: Role
   name: jenkins-deployer
   apiGroup: rbac.authorization.k8s.io
+
